
	* Cleanup Makefiles for portable use.

	* configure.ac, libfreeipmi/src/driver/ipmi-openipmi-driver.c:
	Check and load sys/ioccom.h as needed.

	* common/src/freeipmi-portability.h: Define timeradd and timersub
	if they don't exist on the system.

	* configure.ac, libfreeipmi/src/driver/ipmi-kcs-driver.c: Check
	and handle iopl() as needed.

	* configure.ac, common/src/freeipmi-portability.h,
	common/src/freeipmi-portability.c: Check for and port strsep as needed.

	* ipmi-raw/src/ipmi-raw.c: include freeipmi-portability.h to deal
	with strsep.

	* libfreeipmi/src/driver/ipmi-inband.h: Removed file.  Move macros
	into ipmi-kcs-driver.c.

	* ipmipower/src/wrappers.h, ipmipower/src/wrappers.c: Remove
	some unused wrapper functions.

	* ipmpower/src/wrappers.c: include freeipmi-portability.h to deal
	with timersub() portability.

	* configure.ac, common/src/ipmi-ping.c,
	ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c,
	ipmidetect/src/ipmidetectd/ipmidetectd_loop.c,
	ipmipower/src/ipmipower_connection.c: Check and use hstrerror
	appropriately.

	* ipmiconsole/src/libipmiconsole/: include sys/types.h for UINT_MAX.

	* General cleanup for portability, do not load unnecessary .h
	files, remove unneeded .h files, etc.

	* General cleanup, make Makefile's consistent to one another, etc.
	
2008-06-05  Albert Chu <chu11@llnl.gov>

	* configure.ac: Tweak gethostbyname_r logic.
	
2008-06-04  Albert Chu <chu11@llnl.gov>

	* config/ac_gethostbyname_r.m4: Remove file.

	* configure.ac: Add alternate gethostbyname_r checks that work on
	Solaris.  Remove legacy check for program_invocation_short_name.
	
2008-06-04  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/src/ipmi-sensors-display-common.c
	(ipmi_sensors_get_thresholds): Special case completion code
	IPMI_COMP_CODE_REQUEST_SENSOR_DATA_OR_RECORD_NOT_PRESENT as an
	"ok" error.
	
2008-06-03  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c,